--- a/starter-kits/bootstrap/package.json
+++ b/starter-kits/bootstrap/package.json
@@ -62,6 +62,7 @@
     "eslint-plugin-jest": "^23.7.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-vue": "^6.0.1",
+    "jquery-once": "^2.2.3",
     "lodash": "^4.17.20",
     "postcss-nested": "^4.2.1",
     "postcss-scss": "^3.0.4",
