(Feature) Add bootstrap javascript support.

--- a/starter-kits/tailwind/source/default/patterns/01-atoms/button/button.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/button/button.wingsuit.yml
@@ -44,6 +44,10 @@ button:
     expanded:
       type: boolean
       label: Expanded
+
+    round:
+      type: boolean
+      label: Round
     color:
       type: select
       required: true
