Add support to ws generate-component for scss.
Add supportFeature function to presets to enable generate to check if a feature like scss is supported.

--- a/starter-kits/tailwind/source/default/patterns/02-molecules/card/card.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/card/card.wingsuit.yml
@@ -36,6 +36,11 @@ card:
       description: An optional button at the bottom of the card.
       preview:
         id: link
+  variants:
+    default:
+      label: Default
+    horizontal:
+      label: Horizontal
   settings:
     alignment:
       type: select
