--- a/starter-kits/tailwind/package.json
+++ b/starter-kits/tailwind/package.json
@@ -81,8 +81,8 @@
     "@tailwindcss/typography": "^0.3.1",
     "alpinejs": "^2.7.0",
     "svg4everybody": "^2.1.9",
-    "swiper": "^5.4.5",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "tiny-swiper": "^1.3.2"
   },
   "gitHead": "bfeff58b8f6e6ace1c28f31ad67d75d6f18ee5a4"
 }
