--- a/starter-kits/tailwind/package.json
+++ b/starter-kits/tailwind/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/starter-kit-tailwind",
-  "version": "1.0.0-beta.32",
+  "version": "1.0.0-beta.33",
   "description": "A design system with Storybook, Tailwind and Drupal",
   "main": "",
   "private": true,
@@ -22,7 +22,7 @@
     "dev:storybook": "start-storybook --config-dir apps/storybook",
     "build:storybook": "build-storybook --config-dir apps/storybook -o ./dist/app-storybook",
     "docs:storybook": "build-storybook --docs --config-dir apps/storybook -o ./dist/app-storybook",
-    "build-storybook": "build-storybook ",
+    "build-storybook": "build-storybook --config-dir apps/storybook",
     "deploy:storybook": "storybook-to-ghpages --existing-output-dir ./dist/app-storybook",
     "dev:drupal": "cross-env-shell NODE_ENV=development \"webpack --watch --config ./apps/drupal/webpack.config.js\"",
     "build:drupal": "cross-env-shell NODE_ENV=production \"webpack  --config ./apps/drupal/webpack.config.js\"",
@@ -46,11 +46,11 @@
     "@storybook/storybook-deployer": "^2.8.7",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
-    "@wingsuit-designsystem/cli": "1.0.0-beta.32",
-    "@wingsuit-designsystem/core": "1.0.0-beta.32",
-    "@wingsuit-designsystem/pattern": "1.0.0-beta.32",
-    "@wingsuit-designsystem/preset-tailwind2": "1.0.0-beta.32",
-    "@wingsuit-designsystem/storybook": "1.0.0-beta.32",
+    "@wingsuit-designsystem/cli": "1.0.0-beta.33",
+    "@wingsuit-designsystem/core": "1.0.0-beta.33",
+    "@wingsuit-designsystem/pattern": "1.0.0-beta.33",
+    "@wingsuit-designsystem/preset-tailwind2": "1.0.0-beta.33",
+    "@wingsuit-designsystem/storybook": "1.0.0-beta.33",
     "autoprefixer": "^9.7.4",
     "core-js": "^3.4.1",
     "cross-env": "^6.0.3",
