--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -173,7 +173,18 @@ jobs:
       - run:
           name: cypress run
           command: yarn test:e2e --record --key 2311d788-c8ef-458b-b009-4cd3aee65180
-
+  chromatic:
+    executor: sb_node
+    parallelism: 4
+    steps:
+      - checkout
+      - attach_workspace:
+          at: .
+      - run:
+          name: Tailwind
+          command: |
+            cd stater-kits/tailwind
+            npx chromatic --project-token ypjuflf82zj
   smoke-tests:
     <<: *defaults
     steps:
@@ -244,6 +255,9 @@ workflows:
       - examples:
           requires:
             - build
+      - chromatic:
+          requires:
+            - install
       - e2e:
           requires:
             - examples
