(feature) Replace background addon with storybook-addon-themes to support dark mode.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,7 @@ jobs:
             - examples
             - packages
             - starter-kits
+            - presets
   build:
     <<: *defaults
     steps:
@@ -52,7 +53,7 @@ jobs:
             - packages
             - starter-kits
             - examples
-
+            - presets
   packtracker:
     <<: *defaults
     steps:
@@ -177,6 +178,7 @@ jobs:
           command: yarn test:e2e --record --key 2311d788-c8ef-458b-b009-4cd3aee65180
   chromatic:
     <<: *defaults
+    working_directory: /tmp/storybook
     parallelism: 4
     steps:
       - checkout
@@ -186,7 +188,7 @@ jobs:
           name: Tailwind
           command: |
             cd stater-kits/tailwind
-            npx chromatic --project-token ypjuflf82zj
+            npx chromatic --exit-zero-on-changes
   smoke-tests:
     <<: *defaults
     steps:
