--- a/starter-kits/tailwind/package.json
+++ b/starter-kits/tailwind/package.json
@@ -37,7 +37,6 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
-    "@storybook/addon-backgrounds": "^6.1.0",
     "@storybook/addon-links": "^6.1.0",
     "@storybook/addon-viewport": "^6.1.0",
     "@storybook/addons": "^6.1.0",
@@ -72,6 +71,7 @@
     "react-dom": "^16.13.1",
     "regenerator-runtime": "^0.13.3",
     "require-context": "^1.1.0",
+    "storybook-addon-themes": "^6.0.1",
     "stylelint-scss": "^3.17.2",
     "webpack": "^4.41.3",
     "yo": "^3.1.1"
