(Fix) Fix e2e caching issues for circle.ci.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -265,9 +265,6 @@ workflows:
       - smoke-tests:
           requires:
             - build
-      - chromatic:
-          requires:
-            - build
       - packtracker:
           requires:
             - build
@@ -277,6 +274,9 @@ workflows:
       - coverage:
           requires:
             - test
+      - chromatic:
+          requires:
+            - examples
       - publish:
           requires:
             - build
