--- a/docs/package.json
+++ b/docs/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.3.1",
     "gatsby": "^1.9.279",
     "gatsby-link": "^1.6.45",
+    "gatsby-plugin-react-helmet": "^3.6.0",
     "gatsby-plugin-segment": "1.0.2",
     "gatsby-plugin-sharp": "^1.6.48",
     "gatsby-plugin-styled-components": "^2.0.0",
@@ -45,7 +46,7 @@
     "react": "^16.12.0",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.0",
+    "react-helmet": "^6.1.0",
     "react-popper-tooltip": "^2.10.0",
     "react-router": "^4.3.1",
     "react-stack-grid": "^0.7.1",
