(feature) Add support to enable/disable referenced patterns.

--- a/starter-kits/tailwind/package.json
+++ b/starter-kits/tailwind/package.json
@@ -20,6 +20,7 @@
   ],
   "scripts": {
     "dev:storybook": "start-storybook --config-dir apps/storybook",
+    "dev:storybook:docksal": "start-storybook --config-dir apps/storybook -p 3000",
     "build:storybook": "build-storybook --config-dir apps/storybook -o ./dist/app-storybook",
     "docs:storybook": "build-storybook --docs --config-dir apps/storybook -o ./dist/app-storybook",
     "build-storybook": "build-storybook --config-dir apps/storybook",
