--- a/starter-kits/tailwind/source/default/patterns/02-molecules/menu/menu.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/menu/menu.wingsuit.yml
@@ -27,7 +27,7 @@ menu:
       fields:
         items:
           - title: Datenschutz
-            link: "#"
+            url: "#"
           - title: Impressum
-            link: "#"
+            url: "#"
   visibility: storybook
