--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -55,6 +55,8 @@
     "lerna": "^3.20.2",
     "leven": "^3.1.0",
     "lodash": "^4.17.15",
+    "mv": "^2.1.1",
+    "rimraf": "^3.0.2",
     "typescript": "^3.4.0",
     "yeoman-environment": "^2.10.2",
     "yeoman-generator": "^4.10.1",
