--- a/starter-kits/tailwind/source/default/patterns/02-molecules/card/card.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/card/card.wingsuit.yml
@@ -2,63 +2,32 @@ card:
   use: "@molecules/card/card.twig"
   label: Card
   description: Amazing card component with image, titles, body and link.
+
   fields:
+    headline:
+      type: text
+      label: Headline
+      preview:
+        faker: lorem.text
     image:
-      label: Image
       type: pattern
-      description: The image tag.
+      label: Image
       preview:
         id: placeholder
         variant: image
         settings:
           style: card
-    preheadline:
-      type: text
-      label: Preheadline
-      description: A short headline above the headline.
-      preview:
-        faker: lorem.word
-    headline:
+    button:
       type: pattern
-      label: Headline
-      description: The main headline.
+      label: Button
       preview:
-        id: headline
-        variant: h4
-        settings:
-          spacing_bottom: small
-    text:
-      type: text
-      label: Text
-      description: A long text under the headline.
-      preview:
-        faker: lorem.paragraph
-    link:
-      type: pattern
-      label: Link
-      description: An optional button at the bottom of the card.
-      preview:
-        id: link
-  variants:
-    default:
-      label: Default
-    horizontal:
-      label: Horizontal
+        id: button
+        variant: default
+
   settings:
-    alignment:
+    text_align:
+      label: Text align
       type: select
-      label: Alignment
-      required: true
-      default: left
       options:
-        left: Left
         center: Center
-    bg_color:
-      type: select
-      label: Bg Color
-      options:
-        gray: Gray
-        blue: Blue
-    url:
-      type: url
-      label: Url
+        right: Right
