--- a/starter-kits/tailwind/source/default/patterns/03-organisms/section/section.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/section/section.wingsuit.yml
@@ -2,7 +2,7 @@ section:
   use: "@organisms/section/section.twig"
   label: Flexible columns section
   icon_path: ws-assets://images/section-icon.svg
-  extend:
+  extends:
     - container.settings
     - grid.settings
   description: "A section with a header and maximum five columns. A combination of container and grid.
