--- a/starter-kits/tailwind/source/default/patterns/03-organisms/section/section.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/section/section.wingsuit.yml
@@ -1,6 +1,6 @@
 section:
   use: "@organisms/section/section.twig"
-  label: Flexible columns section
+  label: Columns section
   icon_path: ws-assets://images/section-icon.svg
   extends:
     - grid.settings
