--- a/starter-kits/tailwind/source/default/patterns/03-organisms/grid/grid.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/grid/grid.wingsuit.yml
@@ -43,37 +43,20 @@ grid:
   configuration:
     columns:
       1:
-        equal:
-          default: 'w-full'
+        equal: 'grid-cols-1'
       2:
-        equal:
-          default: 'w-full md:w-1/2 '
-        '66x33':
-          1: 'w-full md:w-2/3'
-          2: 'w-full md:w-1/3'
-        '33x66':
-          1: 'w-full md:w-1/3'
-          2: 'w-full md:w-2/3'
+        equal: 'grid-cols-1 md:grid-cols-2'
+        '66x33': 'grid-cols-1 md:grid-cols-66/33'
+        '33x66': 'grid-cols-1 md:grid-cols-33/66'
       3:
-        equal:
-          default: 'w-full md:w-1/3'
-        '25x50x25':
-          default: 'w-full md:w-1/4'
-          2: 'w-full md:w-1/2'
+        equal: 'grid-cols-1 md:grid-cols-3'
+        '25x50x25': 'grid-cols-1 md:grid-cols-25/50/25'
       4:
-        equal:
-          default: 'w-full md:w-1/4'
+        equal: 'grid-cols-1 md-grid-cols-2 lg:grid-cols-4'
       5:
-        equal:
-          default: 'w-full sm:w-1/2 md:w-1/5'
+        equal: 'grid-cols-1 md:grid-cols-5'
     gutter:
-      none:
-        container: ''
-        cell: ''
-      default:
-        container: -mx-6 -md:mx-25
-        cell: px-6 md:px-25 mb-6 last:mb-0
-      large:
-        container: -mx-10 -md:mx-35
-        cell: px-10 md:px-35 mb-10 last:mb-0
+      none: ''
+      default: 'gap-4 md:gap-5 lg:gap-7'
+      large: 'gap-10 md:gap-20'
 
