--- a/starter-kits/tailwind/source/default/patterns/04-templates/article/article.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/04-templates/article/article.wingsuit.yml
@@ -14,11 +14,35 @@ article:
       preview:
         id: placeholder
         variant: image
+        settings:
+          style: article
+    lead:
+      type: pattern
+      label: Lead
+      preview:
+        id: rich_text
+        fields:
+          text: '<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros,
+            pulvinar facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus.
+            Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
+            in pretium orci vestibulum eget.</p>'
     text:
-      type: text
+      type: pattern
       label: Text
       preview:
-        faker: lorem.paragraph
+        id: rich_text
+        fields:
+          text: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros,
+            pulvinar facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus.
+            Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
+            in pretium orci vestibulum eget. Class aptent taciti sociosqu ad litora torquent
+            per conubia nostra, per inceptos himenaeos. Duis pharetra luctus lacus ut
+            vestibulum. Maecenas ipsum lacus, lacinia quis posuere ut, pulvinar vitae dolor.
+            Integer eu nibh at nisi ullamcorper sagittis id vel leo. Integer feugiat
+            faucibus libero, at maximus nisl suscipit posuere. Morbi nec enim nunc.
+            Phasellus bibendum turpis ut ipsum egestas, sed sollicitudin elit convallis.
+            Cras pharetra mi tristique sapien vestibulum lobortis. Nam eget bibendum metus,
+            non dictum mauris. Nulla at tellus sagittis, viverra est a, bibendum metus.'
     button:
       type: pattern
       label: Button
