WS #00: general small fix.

--- a/starter-kits/tailwind/source/default/patterns/02-molecules/card/card.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/card/card.wingsuit.yml
@@ -62,5 +62,8 @@ card:
     url:
       type: url
       label: Url
+    show_read_more:
+      label: Show read more
+      type: boolean
   parameters:
     layout: centered
