Add equal height support to section.twig.

--- a/starter-kits/tailwind/source/default/patterns/03-organisms/section/section.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/section/section.wingsuit.yml
@@ -83,6 +83,10 @@ section:
       required: true
       options:
         equal: 20%/20%/20%/20%
+    equal_height:
+      type: boolean
+      group: advanced
+      label: Equal height
   variants:
     1_column:
       label: One Column
