--- a/starter-kits/tailwind/package.json
+++ b/starter-kits/tailwind/package.json
@@ -79,6 +79,7 @@
   },
   "dependencies": {
     "@glidejs/glide": "^3.4.1",
+    "@splidejs/splide": "^2.4.21",
     "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/typography": "^0.3.1",
     "alpinejs": "^2.7.0",
