--- a/lerna.json
+++ b/lerna.json
@@ -5,7 +5,7 @@
     "examples/*",
     "starter-kits/*"
   ],
-  "version": "1.0.0-beta.41",
+  "version": "1.0.0-1.0.0-rc.1.0",
   "registry": "https://registry.npmjs.org",
   "npmClient": "yarn"
 }
