--- a/packages/pattern/package.json
+++ b/packages/pattern/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/pattern",
-  "version": "1.0.0-beta.41",
+  "version": "1.0.0-1.0.0-rc.1.0",
   "description": "Wingsuit Patterns.",
   "repository": {
     "type": "git",
