--- a/starter-kits/tailwind/package.json
+++ b/starter-kits/tailwind/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/starter-kit-tailwind",
-  "version": "1.0.0-beta.41",
+  "version": "1.0.0-1.0.0-rc.1.0",
   "description": "A design system with Storybook, Tailwind and Drupal",
   "main": "",
   "private": true,
@@ -46,11 +46,11 @@
     "@storybook/storybook-deployer": "^2.8.7",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
-    "@wingsuit-designsystem/cli": "1.0.0-beta.41",
-    "@wingsuit-designsystem/core": "1.0.0-beta.41",
-    "@wingsuit-designsystem/pattern": "1.0.0-beta.41",
-    "@wingsuit-designsystem/preset-tailwind2": "1.0.0-beta.41",
-    "@wingsuit-designsystem/storybook": "1.0.0-beta.41",
+    "@wingsuit-designsystem/cli": "1.0.0-1.0.0-rc.1.0",
+    "@wingsuit-designsystem/core": "1.0.0-1.0.0-rc.1.0",
+    "@wingsuit-designsystem/pattern": "1.0.0-1.0.0-rc.1.0",
+    "@wingsuit-designsystem/preset-tailwind2": "1.0.0-1.0.0-rc.1.0",
+    "@wingsuit-designsystem/storybook": "1.0.0-1.0.0-rc.1.0",
     "autoprefixer": "^9.7.4",
     "core-js": "^3.4.1",
     "cross-env": "^6.0.3",
